# Diploma

./: .gitignore  DB.md  package-lock.json  run.sh
backend/: CMakeLists.txt  application.conf  build.sh
backend/src/: application.h  main.cpp  request_handler.h
backend/src/analytics/: analytics.cpp  analytics.h
backend/src/api/: api_handler.cpp  api_handler.h
backend/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
backend/src/call_simulator/: call_generator.cpp  call_generator.h
backend/src/config/: dynamic_config.cpp  dynamic_config.h
backend/src/domain/: call_statistics.h  call_statistics_fwd.h  hub.h  hub_fwd.h  nas_ip.h  nas_ip_fwd.h  pricelist.h  pricelist_fwd.h  server.h  server_fwd.h  tarif.h  tarif_fwd.h  trunk.h  trunk_fwd.h  worker.h
backend/src/logger/: logger.h
backend/src/postgres/: postgres.cpp  postgres.h
backend/src/sync/: config_loader.cpp  config_loader.h  event_loader.cpp  event_loader.h  sync_config.h  thread_loader.cpp  thread_loader.h
backend/src/ui/: view.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CallStatsDashboard.tsx  Config.tsx  Dashboard.tsx  Layout.tsx  Login.tsx  Logs.tsx  Pricelists.tsx  Simulator.tsx  Tables.tsx  Tarifs.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
